--- a/2021-XX-XX-Merklist-Tree.ipynb
+++ b/2021-XX-XX-Merklist-Tree.ipynb
@@ -1,12 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d4564a4-8af4-4cd2-a085-ec4484c83dbf",
+   "cell_type": "markdown",
+   "id": "d6b5f16e-76a4-473f-a8cd-efd532f8673f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Merklist Tree\n",
+    "\n",
+    "Part 2 of the Merklist idea. Constructing a tree structure of summarized sublists, so that mutations to the list can be computed, verified, and stored using $O(log(N))$ time and space.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
