Move Merklist summary to second cell; move drafts to other branch

--- a/2021-07-07-Merklist.ipynb
+++ b/2021-07-07-Merklist.ipynb
@@ -2,10 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2bdec887-ee29-4bef-8978-88a81940f7bc",
+   "id": "83dd7287-bca5-49f9-b927-31bbc519d5b9",
    "metadata": {},
    "source": [
-    "# Merklist\n",
+    "# Merklist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf97974c-5582-4bf5-8ed8-6c43daf5036c",
+   "metadata": {},
+   "source": [
     "Using matrix multiplication's associativity and non-commutativity properties provides a natural definition of a cryptographic hash / digest / summary of an ordered list of elements. Due to the non-commutativity property, lists that only differ in element order result in a different summary. Due to the associativity property, arbitrarily divided adjacent sub-lists can be summarized independently and combined to quickly find the summary of their concatenation. This definition provides exactly the properties needed to define a list, and does not impose any unnecessary structure that could cause two equivalent lists to produce different summaries. The name *Merklist* is intended to be reminicent of other hash-based data structures like [Merkle Tree](https://en.wikipedia.org/wiki/Merkle_tree) and [Merklix Tree](https://www.deadalnix.me/2016/09/24/introducing-merklix-tree-as-an-unordered-merkle-tree-on-steroid/)."
    ]
   },
